# monark_budget

./: .gitignore  BASELINE_REPORT.md  CLAUDE.md  README.md  config.py  main.py  plan.md  readme_technical.md  step_2_report.md  step_3_report.md  step_4_report.md  step_5_report.md  test_email_sender.py  test_error_handling.py  test_llm.py  test_logging.py  testing.ipynb  testing_nodes.py  unitest.py
.github/workflows/: daily_budget_data_git_pipeline.yml
services/: daily_budget_data_git_pipeline.yml
services/api/: 4  README.md  pyproject.toml
services/api/app/: exceptions.py  logging_config.py
services/api/app/agent/: agent_graph.py  agent_utilities.py  nodes.py  state.py
services/api/app/domain/: prompts.py
services/api/pipelines/: data_import_pipeline.py  data_parsing_functions.py  import_functions.py  monarchmoney.py  mongo_client.py
